Fri Aug 31 11:53:05 2001  Krishnakumar B  <kitty@cs.wustl.edu>

         * ace/OS.h:
         * ace/Timer_Queue_T.h:
         * ace/Timer_Queue_T.h:
         * ace/config-hpux-11.00.h:
         * ace/config-hpux11.h:
         * ace/config-irix6.x-common.h:
         * ace/config-linux-common.h:
         * ace/config-lynxos.h:
         * ace/config-osf1-4.0.h:
         * ace/config-pharlap.h:
         * ace/config-sunos4-g++.h:
         * ace/config-sunos4-lucid3.2.h:
         * ace/config-sunos4-sun3.x.h:
         * ace/config-sunos4-sun4.1.4.h:
         * ace/config-sunos4-sun4.x-orbix.h:
         * ace/config-sunos5.4-centerline-2.x.h:
         * ace/config-sunos5.4-g++.h:
         * ace/config-sunos5.4-sunc++-4.x-orbix.h:
         * ace/config-sunos5.4-sunc++-4.x.h:
         * ace/config-sunos5.5.h:
         * ace/config-tandem.h:

           Fixed up documentation of ACE_TIMER_SKEW. Fixed bogus values in
           all the above files. Should help in removing some of the errors
           in TAO tests. Any test in ACE/TAO which breaks because of this
           change is broken and should be fixed.


Fri Aug 31 12:00:00 2001  Steve Huston  <shuston@riverace.com>

        * tests/Bound_Ptr_Test.icc: New Visual Age C++ config for this test.
        * tests/tests.icp: Added Bound_Ptr_Test.icc, Service_Config_Test.icc,
                           and libService_Config_DLL.icc.

Fri Aug 31 11:40:31 2001  Steve Huston  <shuston@riverace.com>

        * tests/MEM_Stream_Test.(cpp h): Fixed single-threaded builds.

Fri Aug 31 08:13:26 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/perltest2cpp.pl:

          Added a -t option to set the timeout factor.

Thu Aug 30 18:08:32 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/config-linux-common.h:

          Added some more missing stuff which might break compilations.
          The previous change also removed the existing definition for